--- a/index.html
+++ b/index.html
@@ -3,95 +3,28 @@
 
 <head>
   <meta charset="utf-8">
-  <title>😁Abdu's Personal Website</title>
+  <title>Drum Kit</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing=20>
-    <tr>
-      <td><img src="img\circle-cropped.png" alt="Abdu profile picture"></td>
-      <td>
-        <h1>Abdu</h1>
-        <p><em>Founder and CTO of <strong><a href="https://www.abderahmen-saidi.de">Abderahmen Saidi.</a></strong></em></p>
-        <p>I am an iOS and Web Developer. I love coffee and brew my own beers.</p>
-      </td>
-    </tr>
-  </table>
 
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>M.A Design</li>
-    <li>B.A Design </li>
-  </ul>
-  <hr>
-  <h3>My Hobbies</h3>
-  <ol>
-    <li>Sport</li>
-    <li>Drawing</li>
-    <li>Animation</li>
-  </ol>
-  <hr>
-  <table cellspacing="10">
-    <thead>
-      <th>Years</th>
-      <th>Works</th>
-    </thead>
-    <tr>
-      <td>2010-2013</td>
-      <td>Lead Developer at Restart-info</td>
-    <tr>
-      <td>2010</td>
-      <td>Web Designer by Yalil Prod</td>
-    </tr>
+  <h1 id="title">Drum 🥁 Kit</h1>
+  <div class="set">
+    <button class="w drum">w</button>
+    <button class="a drum">a</button>
+    <button class="s drum">s</button>
+    <button class="d drum">d</button>
+    <button class="j drum">j</button>
+    <button class="k drum">k</button>
+    <button class="l drum">l</button>
+  </div>
 
-    </tr>
-  </table>
-  <hr>
-  <h3>Skills</h3>
+<script src="index.js" charset="utf-8"></script>
 
-  <table cellspacing="10">
-    <tr>
-
-      <td>Web Design</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-    </tr>
-    <td>Vuejs</td>
-    <td>⭐</td>
-    <td>⭐</td>
-    <td>⭐</td>
-    <td>⭐</td>
-
-    <tr>
-
-      <td>Web Design</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-
-    </tr>
-    <tr>
-      <td>Front-End Development</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-      <td>⭐</td>
-
-    </tr>
-
-  </table>
-
-  <hr>
-  <a href="contact.html">Contact Me</a>
-  <br>
-  <a href="input.html">Inputs</a>
 </body>
-
+<footer>
+  Made with ❤️ in Bielefeld.
+</footer>
 </html>
